--- a/h5game_backend/templates/share.html
+++ b/h5game_backend/templates/share.html
@@ -49,7 +49,6 @@
         });
         wx.error(function(res){
             // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
-            
         });
 
         wx.onMenuShareTimeline({
@@ -97,8 +96,8 @@
             var shareCode = "{{resp.userShareInfo.shareCode}}";
             var activeId =  "{{resp.userShareInfo.activeId}}";
             var userId = "{{resp.userShareInfo.userId}}"
-            var postUrl = "/page/user/shared";
-            var posting = $.post(postUrl, {'userId' : userId, "shareCode" : shareCode, "activeId" : activeId});            
+            var postUrl = "/page/user/shared/" + userId + "/" + shareCode + "/" + activeId;
+            var posting = $.post(postUrl, {});
         };
     </script>
 </html>
