--- a/h5game_backend/templates/prized.html
+++ b/h5game_backend/templates/prized.html
@@ -131,7 +131,7 @@
                 var shareCode = "{{resp.userShareInfo.shareCode}}";
                 var activeId =  "{{resp.userShareInfo.activeId}}";
                 var userId = "{{resp.userShareInfo.userId}}"
-                var postUrl = "/page/user/shared/" + userId + "/" + shareCode + "/" + activeId;
+                var postUrl = "/game/user/shared/" + userId + "/" + shareCode + "/" + activeId;
                 var posting = $.post(postUrl, {});
             };
         </script>
