--- a/h5game_backend/templates/game.html
+++ b/h5game_backend/templates/game.html
@@ -17,7 +17,7 @@
         <div id="div-game-page-{{resp['numberIndex']}}">
             <div id="div-play-game-page">
                 <div class="title">{{resp['question']['title']}}
-                    <span class="tips">----({{resp['question']['tips']}})</span>
+                    <span class="tips">----(提示{{resp['question']['tips']}})</span>
                 </div>
                 <div class="question">
                     <div class="inner-question">
