--- a/h5game_backend/templates/prized.html
+++ b/h5game_backend/templates/prized.html
@@ -46,7 +46,7 @@
     <body  id="main" unselectable="on" onselectstart="return false;">
         <div id="div-prized-page">
             <div class="div-prized-desc head">你把冠军</div>
-            <div class="div-prized-desc">抢得连打车的都没有了，</div>
+            <div class="div-prized-desc">抢得连打车的钱都没有了，</div>
             <div class="div-prized-desc">授予你</div>
             <div class="div-prized-desc">”里约首席大佬“称号.</div>
             <div class="div-prizecode">兑奖码：{{resp['prizeInfo']['prizeCode']}}</div>
