--- a/h5game_backend/templates/homepage.html
+++ b/h5game_backend/templates/homepage.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </body>    
-    <% if resp.weiXinSignInfo %>
+    {% if resp.weiXinSignInfo %}
         <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
         <script>        
             wx.config({
@@ -112,5 +112,5 @@
                 var posting = $.post(postUrl, {});
             };
         </script>
-    <% endif %>
+    {% endif %}
 </html>
