--- a/h5game_backend/templates/welcome.html
+++ b/h5game_backend/templates/welcome.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </body>
-    <% if resp.weiXinSignInfo %>
+    {% if resp.weiXinSignInfo %}
         <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
         <script>        
             wx.config({
@@ -101,5 +101,5 @@
                 var posting = $.post(postUrl, {});
             };
         </script>
-    <% endif %>
+    {% endif %}
 </html>
