--- a/h5game_backend/templates/homepage.html
+++ b/h5game_backend/templates/homepage.html
@@ -48,7 +48,7 @@
         <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
         <script>        
             wx.config({
-                debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
                 appId: "{{resp.weiXinSignInfo.appId}}", // 必填，公众号的唯一标识
                 timestamp: "{{resp.weiXinSignInfo.timestamp}}", // 必填，生成签名的时间戳
                 nonceStr: "{{resp.weiXinSignInfo.nonceStr}}", // 必填，生成签名的随机串
@@ -65,7 +65,8 @@
 
             wx.onMenuShareTimeline({
                 title: '{{resp.userShareInfo.title}}', // 分享标题
-                link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
+                // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
+                link: 'http://h5.yiketalks.com/game/redirect/zoukai', // 分享链接
                 imgUrl: '', // 分享图标
                 success: function () {
                     afterShared();
@@ -77,7 +78,8 @@
 
             wx.onMenuShareAppMessage({
                 title: '{{resp.userShareInfo.title}}', // 分享标题
-                link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
+                // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
+                link: 'http://h5.yiketalks.com/game/redirect/zoukai', // 分享链接
                 imgUrl: '', // 分享图标
                 desc: '{{resp.userShareInfo.content}}', // 分享描述
                 type: 'link', // 分享类型,music、video或link，不填默认为link
@@ -92,7 +94,8 @@
 
             wx.onMenuShareQQ({
                 title: '{{resp.userShareInfo.title}}', // 分享标题
-                link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
+                // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
+                link: 'http://h5.yiketalks.com/game/redirect/zoukai', // 分享链接
                 imgUrl: '', // 分享图标
                 desc: '{{resp.userShareInfo.content}}', // 分享描述
                 success: function () {
