--- a/h5game_backend/templates/nomoreplay.html
+++ b/h5game_backend/templates/nomoreplay.html
@@ -45,7 +45,7 @@
             wx.onMenuShareTimeline({
                 title: '{{resp.userShareInfo.title}}', // 分享标题
                 // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
-                link: 'http://h5.yiketalks.com/game/redirect/zoukai', // 分享链接
+                link: 'http://h5.yiketalks.com/game/test', // 分享链接
                 imgUrl: '', // 分享图标
                 success: function () {
                     afterShared();
@@ -58,7 +58,7 @@
             wx.onMenuShareAppMessage({
                 title: '{{resp.userShareInfo.title}}', // 分享标题
                 // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
-                link: 'http://h5.yiketalks.com/game/redirect/zoukai', // 分享链接
+                link: 'http://h5.yiketalks.com/game/test', // 分享链接
                 imgUrl: '', // 分享图标
                 desc: '{{resp.userShareInfo.content}}', // 分享描述
                 type: 'link', // 分享类型,music、video或link，不填默认为link
@@ -74,7 +74,7 @@
             wx.onMenuShareQQ({
                 title: '{{resp.userShareInfo.title}}', // 分享标题
                 // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
-                link: 'http://h5.yiketalks.com/game/redirect/zoukai', // 分享链接
+                link: 'http://h5.yiketalks.com/game/test', // 分享链接
                 imgUrl: '', // 分享图标
                 desc: '{{resp.userShareInfo.content}}', // 分享描述
                 success: function () {
