--- a/h5game_backend/templates/prized.html
+++ b/h5game_backend/templates/prized.html
@@ -71,7 +71,7 @@
         <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
         <script>        
             wx.config({
-                debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
                 appId: "{{resp.weiXinSignInfo.appId}}", // 必填，公众号的唯一标识
                 timestamp: "{{resp.weiXinSignInfo.timestamp}}", // 必填，生成签名的时间戳
                 nonceStr: "{{resp.weiXinSignInfo.nonceStr}}", // 必填，生成签名的随机串
@@ -81,52 +81,51 @@
 
             wx.ready(function(){
                 // config信息验证后会执行ready方法，所有接口调用都必须在config接口获得结果之后，config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中。
+
+
+                wx.onMenuShareTimeline({
+                    title: '{{resp.userShareInfo.title}}', // 分享标题
+                    link: '{{resp.userShareInfo.url}}', // 分享链接
+                    imgUrl: 'http://h5.yiketalks.com/images/logo.jpg', // 分享图标
+                    success: function () {
+                        afterShared();
+                    },
+                    cancel: function () { 
+                        // 用户取消分享后执行的回调函数
+                    }
+                });
+
+                wx.onMenuShareAppMessage({
+                    title: '{{resp.userShareInfo.title}}', // 分享标题
+                    link: '{{resp.userShareInfo.url}}', // 分享链接
+                    imgUrl: 'http://h5.yiketalks.com/images/logo.jpg', // 分享图标
+                    desc: '{{resp.userShareInfo.content}}', // 分享描述
+                    type: 'link', // 分享类型,music、video或link，不填默认为link
+                    dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+                    success: function () {
+                        afterShared();
+                    },
+                    cancel: function () { 
+                        // 用户取消分享后执行的回调函数
+                    }
+                });
+
+                wx.onMenuShareQQ({
+                    title: '{{resp.userShareInfo.title}}', // 分享标题
+                    // link: 'http://h5.yiketalks.com/game/redirect/zoukai/{{resp.userShareInfo.shareCode}}', // 分享链接
+                    link: '{{resp.userShareInfo.url}}', // 分享链接
+                    imgUrl: 'http://h5.yiketalks.com/images/logo.jpg', // 分享图标
+                    desc: '{{resp.userShareInfo.content}}', // 分享描述
+                    success: function () {
+                        afterShared();
+                    },
+                    cancel: function () { 
+                       // 用户取消分享后执行的回调函数
+                    }
+                });
             });
             wx.error(function(res){
                 // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
-            });
-
-            wx.onMenuShareTimeline({
-                title: '{{resp.userShareInfo.title}}', // 分享标题
-                // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
-                link: 'http://h5.yiketalks.com/game/test', // 分享链接
-                imgUrl: '', // 分享图标
-                success: function () {
-                    afterShared();
-                },
-                cancel: function () { 
-                    // 用户取消分享后执行的回调函数
-                }
-            });
-
-            wx.onMenuShareAppMessage({
-                title: '{{resp.userShareInfo.title}}', // 分享标题
-                // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
-                link: 'http://h5.yiketalks.com/game/test', // 分享链接
-                imgUrl: '', // 分享图标
-                desc: '{{resp.userShareInfo.content}}', // 分享描述
-                type: 'link', // 分享类型,music、video或link，不填默认为link
-                dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
-                success: function () {
-                    afterShared();
-                },
-                cancel: function () { 
-                    // 用户取消分享后执行的回调函数
-                }
-            });
-
-            wx.onMenuShareQQ({
-                title: '{{resp.userShareInfo.title}}', // 分享标题
-                // link: '{{resp.userShareInfo.shareUrl}}', // 分享链接
-                link: 'http://h5.yiketalks.com/game/test', // 分享链接
-                imgUrl: '', // 分享图标
-                desc: '{{resp.userShareInfo.content}}', // 分享描述
-                success: function () {
-                    afterShared();
-                },
-                cancel: function () { 
-                   // 用户取消分享后执行的回调函数
-                }
             });
 
 
