--- a/h5game_backend/static/css/homepage.css
+++ b/h5game_backend/static/css/homepage.css
@@ -16,6 +16,10 @@
     border: 4px solid black;
 }
 
+.video{
+    width: 100%;
+}
+
 .div-homepage-prize{
     background-color: #000000;
     width: 100%;
