--- a/h5game_backend/static/css/prized.css
+++ b/h5game_backend/static/css/prized.css
@@ -10,7 +10,7 @@
     padding-top: 88px !important;
 }
 .div-prized-desc{
-    width: 100%;
+    /*width: 100%;*/
     padding-left: 14%;
     display: inline-block;
     font-style: italic;
