--- a/h5game_backend/templates/prized.html
+++ b/h5game_backend/templates/prized.html
@@ -63,7 +63,7 @@
                 并妥善保存你的赎金兑换码
             </div>
             <div class="div-prized-bottom">
-                (还有其他冠军，通知更多兄弟来抢^.^)
+                <span>还有其他冠军，点击右上角</span><img style="height:20px;" src="{{url_for('static', filename='images/share_press.png')}}">通知更多兄弟来抢</span>
             </div>
         </div>
     </body>
