--- a/h5game_backend/static/css/prized.css
+++ b/h5game_backend/static/css/prized.css
@@ -5,14 +5,19 @@
     min-height:100%;
 }
 
-
-.div-prized-desc.head{    
-    padding-top: 88px !important;
+.div-welldone-desc.head{
+    padding-top: 120px !important;
 }
+
+.font-welldone-title{
+    font-size: 1.6m !important;
+    color: yellow;
+}
+
 .div-prized-desc{
-    padding-left: 14%;
+    padding-left: 20%;
     font-style: italic;
-    font-size: 22px;
+    font-size: 1.2em;
     font-weight: bold;
     padding-top: 2px;
 }
@@ -21,10 +26,13 @@
     margin-bottom: 0.16em;
 }
 
-.div-prized-now{
-    margin-top: 48%;
-    margin-left: 35%;
+.div-welldone-desc{
+    color: #dddddd !important;
+    padding-left: 20%;
+    line-height: 30px;
     font-size: 1.2em;
+    margin: 0px auto;
+    font-weight: bold;
 }
 
 .span-prized-now{
@@ -38,33 +46,21 @@
     margin-top: 110px;
 }
 
-.left-arrow{
-    background-color: #000000;
-    border: 1px dashed red;
-    width: 150px;
-    margin: 0px auto;
-    text-align: center;
-    margin-top: 250px;
-}
-
-.div-prizedinfo-desc{
-    font-size: 16px;
-    line-height: 30px;
-}
-
 .div-prizecode{
     background-color: #000000;
     border: 1px dashed red;
-    width: 150px;
+    width: 220px;
+    height: 40px;
+    line-height: 40px;
     margin: 0px auto;
+    font-size: 16px;
     text-align: center;
-    margin-top: 250px;
+    margin-top: 210px;
 }
 .div-prizedinfo-desc{
-    margin-top: 20px;
     font-size: 12px !important;
     color: #dddddd !important;
-    line-height: 30px;
+    line-height: 20px;
     text-align: center;
     margin: 0px auto;
     font-weight: bold;
@@ -74,17 +70,19 @@
 }
 .div-prized-bottom{
     color: #dddddd !important;
-    margin-top: 100px;
     font-size: 10px !important;
     text-align: center;
-    margin-top: 20px;
     font-size: 10px;
     line-height: 30px;
     text-align: center;
-    margin: 0px auto;  
-    padding-top: 15px;                              
+    margin: 0px auto;
 }
 .div-prized-bottom img{
     display: inline-block;
     height: 20px;
+}
+.img-screencode{
+    width: 130px;
+    margin: 0px auto;
+    padding-top: 10px;
 }
